updated completely to align with C version of array lab